--- a/src/Components/ProductCard/ProductCard.css
+++ b/src/Components/ProductCard/ProductCard.css
@@ -1,5 +1,5 @@
 .product-card {
-    background: #fff;
+    background: #F4F5F7;
     border: 1px solid #ddd;
     border-radius: 15px;
     padding: 5px ,5px , 5px , 5px;
