--- a/src/pages/DeliveryDetails/DeliveryDetails.css
+++ b/src/pages/DeliveryDetails/DeliveryDetails.css
@@ -1,31 +1,3 @@
-/* .delivery-details {
-    background-color: #f8f9fa; 
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    
-}
-
-.delivery-details h3 {
-    font-family: "Arial", sans-serif;
-    font-size: 18px; 
-    color: #333; 
-    margin: 10px 0; 
-    font-weight: 600; 
-  }
-
-  .delivery-details h3:hover {
-    color: #007bff; 
-    transform: scale(1.05); 
-    transition: color 0.3s ease, transform 0.3s ease; 
-  }
-
-  .delivery-details ul {
-    display: flex; /* Makes the list horizontal */
-    /* align-items: center;
-    padding: 5px;
-    margin: 10px;
-  } */ 
 
 
   .feature-highlights {
@@ -33,7 +5,7 @@
     flex-direction: row;
     justify-content: space-around; 
     align-items: center;
-    background-color: #f8f9fa; 
+    background-color: #FAF3EA; 
     padding: 20px 40px; 
     border-radius: 10px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
