--- a/src/pages/ProductPage/ProductPage.css
+++ b/src/pages/ProductPage/ProductPage.css
@@ -1,20 +1,19 @@
 .product-page {
-    padding: 10px;
+    
     background-color: #f9f9f9;
   }
   
   .product-list {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(auto-fill,250px);
     gap: 20px; 
+    justify-content: center;
     
   }
   
   .product-list > * {
-    flex: 0 0 calc(25% - 20px); 
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
     border: 1px solid #ddd;
-    padding: 5px;
     background-color: #fff;
     border-radius: 5px;
   }
