--- a/src/pages/CollectionPage/CollectionsPage.css
+++ b/src/pages/CollectionPage/CollectionsPage.css
@@ -1,22 +1,37 @@
-  .collections-page {
-  font-family: Arial, sans-serif;
-    padding: 20px;
-    text-align: center;
-    background-color: #FAF3EA; /* White background */
-   } 
   
-  .collection-page h1 {
+  
+  .collections-page {
+    font-family: Arial, sans-serif;
+    padding: 20px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
+    align-items: center;
+    
+    height: 300px;
+    position: relative;
+  } 
+  
+  .collections-page::before  {
+    content: " ";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background-image:url("BackgroundImage/Background.jpg");
+    background-position: center;
+    background-size: cover;
+    filter: blur(1.5px);
+    z-index: 1;
+  }
+
+  .collections-page h1 {
+    z-index: 2;
   }
   
-  
-  .collection-page h3 {
+  .collections-page h3 {
     font-size: 1.4rem;
     color: #333;
-    margin-bottom: 10px;
+    z-index: 2;
   }
   
   
