--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -25,8 +25,8 @@
   }
   
   nav ul {
-    display: flex; /* Makes the list horizontal */
-    list-style: none; /* Removes the default bullet points */
+    display: flex; 
+    list-style: none; 
     align-items: center;
     padding: 0;
     margin: 0;
@@ -41,7 +41,7 @@
   }
   
   nav li:hover {
-    color: #007bff; /* Changes color on hover for better interactivity */
+    color: #007bff; 
   }
   
   .icons {
