--- a/src/Components/ProductCard/ProductCard.css
+++ b/src/Components/ProductCard/ProductCard.css
@@ -2,18 +2,18 @@
   background: #F4F5F7;
   border: 1px solid #ddd;
   border-radius: 15px;
-  text-align: center;
+  text-align: left;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-  height: 100%;
+  height: 400px;
   margin: 20px auto; 
 
 }
 
 .product-card .product-image {
-  width: 230px;
+  width: 247px;
   height: 230px;
   
-border-radius: 5px;
+  border-radius: 5px;
 }
 
 .price {
@@ -32,4 +32,14 @@ border-radius: 5px;
 
 .btn:hover {
   background-color: #1d3557;
+}
+
+.product-card-link {
+  text-decoration: none;
+  color: inherit; 
+}
+
+.product-card h3 {
+  font-weight: bold; 
+  margin: 10px 0; 
 }
