--- a/src/pages/DeliveryDetails/DeliveryDetails.css
+++ b/src/pages/DeliveryDetails/DeliveryDetails.css
@@ -6,25 +6,32 @@
     justify-content: space-around; 
     align-items: center;
     background-color: #FAF3EA; 
-    padding: 20px 40px; 
-    border-radius: 10px; 
+    padding: 50px 60px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    margin: 40px auto; 
      
   }
   
   .feature {
    
-    text-align: center; 
     flex: 1; 
     margin: 0 10px; 
+    display: flex;
+    flex-direction: row;
+    padding: 20px 40px; 
+    text-align: left;
+    align-items: center;
+    gap: 15px;
+
   }
   
   .feature-icon {
   
     font-size: 36px; 
     color: #333; 
-    margin-bottom: 10px; 
+    display: flex;
+    align-items: center;
+
+
   }
   
   .feature h3 {
@@ -32,7 +39,7 @@
     font-size: 18px; 
     color: #333; 
     margin: 5px 0; 
-    font-weight: 600; 
+    font-weight: 700; 
   }
   
   .feature p {
@@ -40,5 +47,6 @@
     font-size: 14px; 
     color: #666; 
     margin: 0; 
+
   }
   
