--- a/src/Components/ProductCard/ProductCard.css
+++ b/src/Components/ProductCard/ProductCard.css
@@ -1,19 +1,19 @@
 .product-card {
   background: #F4F5F7;
   border: 1px solid #ddd;
-  border-radius: 15px;
+  border-radius: 1%;
   text-align: left;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
   height: 400px;
-  margin: 20px auto; 
+  margin: 30px auto; 
 
 }
 
 .product-card .product-image {
-  width: 247px;
+  width: 248px;
   height: 230px;
   
-  border-radius: 5px;
+  border-radius: 2px;
 }
 
 .price {
@@ -21,18 +21,7 @@
   font-weight: bold;
 }
 
-.btn {
-  background-color: #457b9d;
-  color: #fff;
-  padding: 8px 10px;
-  border: none;
-  border-radius: 2px;
-  cursor: pointer;
-}
 
-.btn:hover {
-  background-color: #1d3557;
-}
 
 .product-card-link {
   text-decoration: none;
