--- a/src/Components/ProductCard/ProductCard.css
+++ b/src/Components/ProductCard/ProductCard.css
@@ -5,13 +5,12 @@
   text-align: left;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
   height: 400px;
-  margin: 30px auto; 
 
 }
 
 .product-card .product-image {
-  width: 248px;
-  height: 230px;
+  width: 100%;
+  height: 65%;
   
   border-radius: 2px;
 }
