--- a/src/Components/ProductDetails/ProductDetails.css
+++ b/src/Components/ProductDetails/ProductDetails.css
@@ -5,9 +5,10 @@
   
   .product-list {
     display: grid;
-    grid-template-columns: repeat(auto-fill,250px);
+    grid-template-columns: repeat(auto-fill,225px);
     gap: 20px; 
     justify-content: center;
+    margin: 60px 0;    
     
   }
   
