--- a/src/Components/ProductDetails/ProductDetails.css
+++ b/src/Components/ProductDetails/ProductDetails.css
@@ -16,6 +16,20 @@
     background-color: #fff;
     border-radius: 5px;
   }
+
+  button {
+    margin: 5px;
+    padding: 10px 20px;
+    background-color: green;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: darkgreen;
+  }
   
   
 
