--- a/src/Components/ProductDetails/ProductDetails.css
+++ b/src/Components/ProductDetails/ProductDetails.css
@@ -9,7 +9,8 @@
     grid-template-columns: repeat(auto-fill,225px);
     gap: 20px; 
     justify-content: center;
-    margin: 60px 0;   
+    margin: 60px 0;  
+    padding: 0 12% ;
     
   }
   
