--- a/src/Components/ProductCard/ProductCard.css
+++ b/src/Components/ProductCard/ProductCard.css
@@ -8,12 +8,14 @@
 
 }
 
-.product-card .product-image {
+.product-card .product-image   {
   width: 100%;
   height: 65%;
   
   border-radius: 2px;
 }
+
+ 
 
 .price {
   color: #e63946;
@@ -31,3 +33,15 @@
   font-weight: bold; 
   margin: 10px 0; 
 }
+
+.product-card .product-card-details {
+  padding: 10px;
+}
+
+.product-card .placeholder-box {
+  width: 100%;
+  height: 65%;
+  background-color: #ddd;
+}
+
+
