--- a/src/Components/ProductDetails/ProductDetails.css
+++ b/src/Components/ProductDetails/ProductDetails.css
@@ -1,8 +1,4 @@
-.product-page {
-    
-    background-color: #f9f9f9;
-   
-  }
+
   
   
   button {
@@ -13,12 +9,31 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    display: flex;
   }
+  
   
   button:hover {
     background-color: darkgreen;
   }
-  
-  
+  .product-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .product-details .product-detailed-image  {
+    width: 250px;
+    height: 200px;
+  }  
+
+ .product-placeholder-box {
+  width: 250px;
+  height: 200px;
+  background-color: #e0e0e0;
+}
+
+.service-buttons {
+  display: flex;
+}
 
   
