--- a/src/Components/ProductDetails/ProductDetails.css
+++ b/src/Components/ProductDetails/ProductDetails.css
@@ -16,11 +16,18 @@
   button:hover {
     background-color: darkgreen;
   }
+
   .product-details {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+
+  .product-details h2  {
+    margin: 10px 0;
+
+  }
+
   .product-details .product-detailed-image  {
     width: 250px;
     height: 200px;
