new updations added

--- a/src/Components/ProductDetails/ProductDetails.css
+++ b/src/Components/ProductDetails/ProductDetails.css
@@ -1,26 +1,10 @@
-
-  
-  
-  button {
-    margin: 10px ;
-    padding: 10px 20px;
-    background-color: green;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+.product-details {
     display: flex;
-  }
-  
-  
-  button:hover {
-    background-color: darkgreen;
-  }
-
-  .product-details {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    gap: 48px;
+    padding: 30px;
+   
   }
 
   .product-details h2 h4 {
@@ -28,17 +12,53 @@
 
   }
 
-  .product-details .product-detailed-image  {
-    width: 250px;
-    height: 200px;
+   .product-detailed-image  {
+    width: 350px;
+    height: auto;
+    border-radius: 10px;
+    object-fit: cover;
+    display: flex;
+    flex-direction: column;
+    
+    
   }  
 
  .product-placeholder-box {
-  width: 250px;
-  height: 200px;
+  width: 350px;
+  height: 300px;
   background-color: #e0e0e0;
+  border-radius: 10px;
 }
 
-.service-buttons {
+/* .service-buttons {
   display: flex;
+} */
+
+.product-info {
+  flex-direction: column;
+  justify-content: center;
+  vertical-align: initial;
+
+}
+
+.product-info h2 {
+  font-size: 42px;
+  line-height: 63px;
+  
+}
+
+.product-info h4 {
+  font-size: 24px;
+  color: gray;
+  line-height: 36px;
+}
+
+.product-info p {
+  font-size: 13px;
+  line-height: 19.5px
+}
+
+.product-rating {
+  line-height: 60px;
+
 }
