--- a/src/Components/ProductForm/ProductForm.css
+++ b/src/Components/ProductForm/ProductForm.css
@@ -30,17 +30,32 @@
     color: #333;
   }
 
-  .createproduct-button ,
-.update-button {
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px;
-    transition: 0.3s ease;
+  .createproduct-button , .update-button {
     display: flex;
+    gap: 10px;
+  }
+
+  .createproduct-button button  , .update-button button{
+    background-color: green;
+    color: white;
+    border: none;
+    padding: 8px 14px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: bold;
 }
 
+
 .form-group input {
+  padding: 12px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 100%;
+}
+
+.form-group textarea {
   padding: 12px;
   font-size: 16px;
   border: 1px solid #ccc;
